<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Upcache</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="nav_camera">Scan a Barcode</string>
    <string name="settings">Settings</string>
    <string name="search_history">Search History</string>
    <string name="saved_items">Saved Items</string>
    <string name="product">Product</string>
    <string name="history">History</string>
    <string name="saved">Saved</string>
    <string name="clear_history">Clear History</string>
    <string name="nothing_to_show_here">Nothing to show here :(</string>
    <string name="enter_a_product_code">Enter a product code</string>
    <string name="historyItemLimit">historyItemLimit</string>
    <string name="link_image">Link image</string>
    <string name="product_image">Product image</string>
    <string name="savedItemList">savedItemList</string>
    <string name="retailers">retailers</string>
    <string name="historyItemList">historyItemList</string>
    <string name="home">Home</string>
    <string name="retail_logo">Retail logo</string>
    <string name="item_saved">Item saved</string>
    <string name="item_removed">Item removed</string>
    <string name="walmart">Walmart</string>
    <string name="walmart_endpoint">http://api.walmartlabs.com/v1/</string>
    <string name="walmart_api_key">edu2jq5jwak2tf4qn2ur3efr</string>
    <string name="json">json</string>
    <string name="bestbuy">BestBuy</string>
    <string name="bestbuy_endpoint">https://api.bestbuy.com/v1/</string>
    <string name="bestbuy_api_key">hvn2j2xymejjrzyx3khyssna</string>
    <string name="amazon">Amazon</string>
    <string name="amazon_endpoint">http://webservices.amazon.com/onca/</string>
    <string name="amazon_api_key">AKIAJWONNCA2HKISYJDA</string>
    <string name="xml">xml</string>
    <string name="ebay">Ebay</string>
    <string name="ebay_endpoint">http://svcs.ebay.com/services/search/FindingService/</string>
    <string name="ebay_api_key" tools:ignore="TypographyDashes">MatthewV-BarCod-PRD-009b22356-357f5baf</string>
    <string name="amazon_associateid" tools:ignore="TypographyDashes">poyopoyo91-20</string>
    <string name="awsSecretKey">sX0NXxQnTZyJ+byD3EPNXaPJu4zkVlKiQpLxwqeP</string>
    <string name="findItemsByProduct">findItemsByProduct</string>
    <string name="AWSAccessKeyId">AWSAccessKeyId</string>
    <string name="itemid">ItemId</string>
    <string name="itemlookup">ItemLookup</string>
    <string name="operation">Operation</string>
    <string name="associatetag">AssociateTag</string>
    <string name="responsegroup">ResponseGroup</string>
    <string name="large">Large</string>
    <string name="idtype">IdType</string>
    <string name="isbn">ISBN</string>
    <string name="searchindex">SearchIndex</string>
    <string name="books">Books</string>
    <string name="all">All</string>
    <string name="UPC_caps">UPC</string>
    <string name="logo">Logo</string>
    <string name="barcode_scan">Barcode Scan</string>
    <string name="search_button">Search button</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="retailer_logo">Retailer logo</string>
    <string name="supported_retailers">Supported Retailers</string>
    <string name="ResultFragment">ResultFragment</string>
    <string name="best_price">Best Price: $%.2f</string>
    <string name="history_cleared">History cleared</string>
    <string name="name">Name: </string>
    <string name="date">Date: </string>
    <string name="price">Price: </string>
</resources>
